openwebui/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui-external
  namespace: openwebui
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https-legacy-k
  hostnames:
    - chat.k.shion1305.com
  rules:
    - backendRefs:
        - name: openwebui-open-webui
          port: 80
